--- a/docker/Dockerfile_base_helper
+++ b/docker/Dockerfile_base_helper
@@ -6,6 +6,9 @@ RUN (echo "/opt/view/lib" \
 
 COPY bin/fix_spack_install /usr/local/bin/fix_spack_install
 
+# Workaround for NVIDIA driver mismatch
+ENV NVIDIA_DISABLE_REQUIRE=true
+
 ENTRYPOINT ["/bin/bash", "--rcfile", "/etc/profile", "-l", "-c"]
 CMD ["/bin/bash"]
 SHELL ["/bin/bash", "--rcfile", "/etc/profile", "-l", "-c"]
