Fix Dockerfiles (I hope)

--- a/docker/Dockerfile_spack_baseimage_ubuntu22.04
+++ b/docker/Dockerfile_spack_baseimage_ubuntu22.04
@@ -78,5 +78,6 @@ ENV ROCM_VERSION=$ROCM_VERSION
 # Workaround for NVIDIA driver mismatch
 ENV NVIDIA_DISABLE_REQUIRE=true
 
-ENTRYPOINT ["/bin/bash", "/opt/spack/share/spack/docker/entrypoint.bash"]
-CMD ["interactive-shell"]
+#ENTRYPOINT ["/bin/bash", "/opt/spack/share/spack/docker/entrypoint.bash"]
+#CMD ["spack-env"]
+ENTRYPOINT ["spack-env"]
