--- a/ci/cscs.yml
+++ b/ci/cscs.yml
@@ -2,13 +2,32 @@ include:
   - remote: 'https://gitlab.com/cscs-ci/recipes/-/raw/master/templates/v2/.ci-ext.yml'
 
 stages:
+  - prepare
   - configure
   - run
+
+variables:
+  CI_GENERATOR_IMAGE_NAME: $CSCS_REGISTRY_PATH/public/ci-generator:$CI_GENERATOR_TAG
+
+build-ci-generator-image:
+  stage: prepare
+  extends: .container-builder-cscs-zen2
+  before_script:
+    - echo $CI_GENERATOR_IMAGE_NAME
+    - export CI_GENERATOR_TAG=`cat ci/docker/* | sha256sum - | head -c 16`
+    - export PERSIST_IMAGE_NAME=$CSCS_REGISTRY_PATH/public/ci-generator:$CI_GENERATOR_TAG
+    - echo "CI_GENERATOR_TAG=$CI_GENERATOR_TAG" > build.env
+  artifacts:
+    reports:
+      dotenv: build.env
+  variables:
+    DOCKERFILE: ci/docker/Dockerfile
+    PERSIST_IMAGE_NAME: $CI_GENERATOR_IMAGE_NAME
 
 pipeline-configure:
   stage: configure
   extends: .container-runner-lightweight-zen2
-  image: docker.io/rjanalik/ci-generator:python-3.12.3
+  image: $CI_GENERATOR_IMAGE_NAME
   script:
     - ci/ci-generator.py > pipeline.yml
   artifacts:
