--- a/ci/docker/Dockerfile.ci-generator
+++ b/ci/docker/Dockerfile.ci-generator
@@ -6,6 +6,7 @@ WORKDIR /usr/src/app
 COPY ci/docker/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Dummy comment to trigger rebuild
 #COPY . .
 
 #CMD [ "python", "./your-daemon-or-script.py" ]
