--- a/ci/config.yaml
+++ b/ci/config.yaml
@@ -17,28 +17,28 @@ rocmver:
 
 # Global variables
 registry_path: "$CSCS_REGISTRY_PATH/test/$CI_COMMIT_SHORT_SHA"
-deploy_path_jfrog: "$CSCS_REGISTRY/docker-ci-ext/base-containers/public"
-deploy_path_github: "ghcr.io/eth-cscs/docker-ci-ext/base-containers"
+deploy_path_jfrog: "$CSCS_REGISTRY/docker-ci-ext/spack-base-containers/public"
+deploy_path_github: "ghcr.io/eth-cscs/docker-ci-ext/spack-base-containers"
 
 # Template variables
 basedockerfile: "docker/Dockerfile_spack_baseimage_{{os}}{{osver}}"
 helperdockerfile: "docker/Dockerfile_base_helper"
-build_base_image_name_tag:
-  cpu: "{{registry_path}}/spack-base:spack{{spackver}}-{{os}}{{osver}}-{{archstr[arch]}}"
-  cuda-x86_64: "{{registry_path}}/spack-base:spack{{spackver}}-{{os}}{{osver}}-{{archstr['cuda-x86_64']}}"
-  cuda-aarch64: "{{registry_path}}/spack-base:spack{{spackver}}-{{os}}{{osver}}-{{archstr['cuda-aarch64']}}"
-  rocm: "{{registry_path}}/spack-base:spack{{spackver}}-{{os}}{{osver}}-{{archstr[arch]}}"
-registry_base_image_name_tag: "{{registry_path}}/spack-base:spack{{spackver}}-{{os}}{{osver}}-{{archstr_deploy[arch]}}"
-deploy_base_image_name_tag_jfrog: "{{deploy_path_jfrog}}/spack-base:spack{{spackver}}-{{os}}{{osver}}-{{archstr_deploy[arch]}}"
-deploy_base_image_name_tag_github: "{{deploy_path_github}}/spack-base:spack{{spackver}}-{{os}}{{osver}}-{{archstr_deploy[arch]}}"
-build_helper_image_name_tag:
-  cpu: "{{registry_path}}/spack-helper:{{os}}{{osver}}-{{archstr[arch]}}"
-  cuda-x86_64: "{{registry_path}}/spack-helper:{{os}}{{osver}}-{{archstr['cuda-x86_64']}}"
-  cuda-aarch64: "{{registry_path}}/spack-helper:{{os}}{{osver}}-{{archstr['cuda-aarch64']}}"
-  rocm: "{{registry_path}}/spack-helper:{{os}}{{osver}}-{{archstr[arch]}}"
-registry_helper_image_name_tag: "{{registry_path}}/spack-helper:{{os}}{{osver}}-{{archstr_deploy[arch]}}"
-deploy_helper_image_name_tag_jfrog: "{{deploy_path_jfrog}}/spack-helper:{{os}}{{osver}}-{{archstr_deploy[arch]}}"
-deploy_helper_image_name_tag_github: "{{deploy_path_github}}/spack-helper:{{os}}{{osver}}-{{archstr_deploy[arch]}}"
+build_build_image_name_tag:
+  cpu: "{{registry_path}}/spack-build:spack{{spackver}}-{{os}}{{osver}}-{{archstr[arch]}}"
+  cuda-x86_64: "{{registry_path}}/spack-build:spack{{spackver}}-{{os}}{{osver}}-{{archstr['cuda-x86_64']}}"
+  cuda-aarch64: "{{registry_path}}/spack-build:spack{{spackver}}-{{os}}{{osver}}-{{archstr['cuda-aarch64']}}"
+  rocm: "{{registry_path}}/spack-build:spack{{spackver}}-{{os}}{{osver}}-{{archstr[arch]}}"
+registry_build_image_name_tag: "{{registry_path}}/spack-build:spack{{spackver}}-{{os}}{{osver}}-{{archstr_deploy[arch]}}"
+deploy_build_image_name_tag_jfrog: "{{deploy_path_jfrog}}/spack-build:spack{{spackver}}-{{os}}{{osver}}-{{archstr_deploy[arch]}}"
+deploy_build_image_name_tag_github: "{{deploy_path_github}}/spack-build:spack{{spackver}}-{{os}}{{osver}}-{{archstr_deploy[arch]}}"
+build_runtime_image_name_tag:
+  cpu: "{{registry_path}}/spack-runtime:{{os}}{{osver}}-{{archstr[arch]}}"
+  cuda-x86_64: "{{registry_path}}/spack-runtime:{{os}}{{osver}}-{{archstr['cuda-x86_64']}}"
+  cuda-aarch64: "{{registry_path}}/spack-runtime:{{os}}{{osver}}-{{archstr['cuda-aarch64']}}"
+  rocm: "{{registry_path}}/spack-runtime:{{os}}{{osver}}-{{archstr[arch]}}"
+registry_runtime_image_name_tag: "{{registry_path}}/spack-runtime:{{os}}{{osver}}-{{archstr_deploy[arch]}}"
+deploy_runtime_image_name_tag_jfrog: "{{deploy_path_jfrog}}/spack-runtime:{{os}}{{osver}}-{{archstr_deploy[arch]}}"
+deploy_runtime_image_name_tag_github: "{{deploy_path_github}}/spack-runtime:{{os}}{{osver}}-{{archstr_deploy[arch]}}"
 baseimg:
   cpu: "docker.io/{{os}}:{{osver}}"
   cuda-x86_64: "docker.io/nvidia/cuda:{{cudaver}}-devel-{{os}}{{osver}}"
