--- a/docker/Dockerfile_base_helper
+++ b/docker/Dockerfile_base_helper
@@ -9,6 +9,11 @@ COPY bin/fix_spack_install /usr/local/bin/fix_spack_install
 # Workaround for NVIDIA driver mismatch
 ENV NVIDIA_DISABLE_REQUIRE=true
 
-ENTRYPOINT ["/bin/bash", "--rcfile", "/etc/profile", "-l", "-c"]
+# The entrypoint ["/bin/bash", "--rcfile", "/etc/profile", "-l", "-c"]
+# does not work in the container engine on Santis.
+# We use ["/entrypoint.sh"] as a workaround
+#ENTRYPOINT ["/bin/bash", "--rcfile", "/etc/profile", "-l", "-c"]
+COPY docker/entrypoint.sh /
+ENTRYPOINT ["/entrypoint.sh"]
 CMD ["/bin/bash"]
 SHELL ["/bin/bash", "--rcfile", "/etc/profile", "-l", "-c"]
