--- a/test/Dockerfile.mpi-osu_bw
+++ b/test/Dockerfile.mpi-osu_bw
@@ -4,6 +4,9 @@ FROM $BUILDIMG as builder
 RUN apt-get update \
   && env DEBIAN_FRONTEND=noninteractive TZ=Europe/Zurich apt-get -yqq install --no-install-recommends build-essential
 
+# Fix error in ./configure: cannot link with -lcuda
+RUN (test -f /usr/local/cuda/lib64/stubs/libcuda.so && ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/cuda/lib64/libcuda.so) || true
+
 ARG TARGET
 RUN spack-install-helper \
     "$TARGET" \
