Update ln command

--- a/test/Dockerfile.mpi-osu_bw
+++ b/test/Dockerfile.mpi-osu_bw
@@ -5,7 +5,12 @@ RUN apt-get update \
   && env DEBIAN_FRONTEND=noninteractive TZ=Europe/Zurich apt-get -yqq install --no-install-recommends build-essential
 
 # Fix error in ./configure: cannot link with -lcuda
-RUN (test -f /usr/local/cuda/lib64/stubs/libcuda.so && ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/cuda/lib64/libcuda.so) || true
+RUN TARGET=/usr/local/cuda/lib64/stubs/libcuda.so; \
+    LINK_NAME=/usr/local/cuda/lib64/libcuda.so; \
+    if test -f $TARGET && test ! -f $LINK_NAME; \
+    then \
+      ln -s $TARGET $LINK_NAME; \
+    fi
 
 ARG TARGET
 RUN spack-install-helper \
